IMP-1449: Fix Coverage map controls on Mobile UI (fixes)

--- a/browser/src/app/shared/google-map-sidebar/google-map-sidebar.component.scss
+++ b/browser/src/app/shared/google-map-sidebar/google-map-sidebar.component.scss
@@ -11,10 +11,11 @@
   justify-content: space-between;
 
   @include response-to(sm) {
-    top: 100px;
+    top: initial;
   }
 
 }
+
 
 .info {
   span {
